--- a/src/template/about.html
+++ b/src/template/about.html
@@ -83,7 +83,7 @@
                 <div class="about__excellence-wrap">
                     <div class="item">
 
-                        <div class="item__head">Long range <br> of flight</div>
+                        <div class="item__head">Long range of <br>  flight</div>
                         <p class="item__text">Exdroner can fly up to 190 miles away with
                             maximum payload. And even more with some improvements
                         </p>
