--- a/src/template/contact.html
+++ b/src/template/contact.html
@@ -21,7 +21,7 @@
                             </a>
                         </li>
                         <li class="info__soc-item">
-                            <a href="#" target="_blank">
+                            <a class="fb" href="#" target="_blank">
                                 <img src="img/Faceb.png" alt="soc">
                             </a>
                         </li>
@@ -60,6 +60,7 @@
                                 <span class="text">
                                            Submit
                                 </span>
+                                <span class="shadow"></span>
 
                             </button>
 
