--- a/src/template/hero.html
+++ b/src/template/hero.html
@@ -4,13 +4,13 @@
             <div class="row">
                 <ul class="hero__menu">
                     <li class="hero__menu-item">
-                        <a href="#contact" class="btm-menu show flowing-scroll"><span>Contact</span></a>
+                        <a href="#contact" class="btn-menu show flowing-scroll"><span>Contact</span></a>
                     </li>
                     <li class="hero__menu-item">
-                        <a href="/details.html" class="btm-menu show"><span>Technical details</span></a>
+                        <a href="/details.html" class="btn-menu show"><span>Technical details</span></a>
                     </li>
                     <li class="hero__menu-item">
-                        <a href="#about" class="btm-menu show flowing-scroll"><span>Information</span></a>
+                        <a href="#about" class="btn-menu show flowing-scroll"><span>Information</span></a>
                     </li>
 
                 </ul>
