--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -3,43 +3,54 @@
     top: 0;
     left: 0;
     width: 100%;
-    //display: flex;
+    display: flex;
     color: #fff;
     z-index: 1000;
-    background: #122A42;
-    display: none;
+    background: #194568;
+    opacity: .8;
+    padding: 0;
+    margin: 0;
+    &__nav {
+        display: flex;
+        justify-content: flex-start ;
+        flex-direction: row-reverse;
+        margin: 0;
+        @include respond-to($xs-max) {
+            justify-content: center;
+        }
 
-    &__wrap {
-        //display: flex;
-
-        max-width: 1144px;
+        .header-nav {
+            display: inline-block;
+            transition: all .3s;
+            font-size: 18px;
+            color: #fff;
+            font-family: 'Montserrat', sans-serif;
+            text-decoration: none;
+            margin-left: 20px;
+            transform:  scale(0);
+            max-height: 0;
+            @include respond-to($xs-max) {
+                font-size: 16px;
+                margin: 0 10px;
+            }
+            @include respond-to($xs-480) {
+                font-size: 14px;
+            }
+            &.fixed {
+                transform:  scale(1);
+                max-height: 50px;
+                padding: 10px 0;
+            }
+        }
 
         .header-item {
-            .btn-header-menu {
-                display: inline-block;
-                transition: all .2s;
-                font-size: 18px;
-                color: #fff;
-                font-family: 'Montserrat', sans-serif;
-                float: right;
-                margin-left: 45px;
-                span {
-                    display: inline-block;
-                }
+            position: fixed;
+            transform: translateX(-50%);
+            top: 100px;
+            transition: all .3s;
 
-            }
-            //
-            //&.fixed {
-            //    transform: rotate(0deg);
-            //    position: relative;
-            //    top: 0;
-            //
-            //    .btm-menu {
-            //        transform: rotate(0deg);
-            //
-            //        margin-left: 25px;
-            //    }
-            //}
+
+
         }
 
 
