--- a/src/style/themes/_benefit.scss
+++ b/src/style/themes/_benefit.scss
@@ -3,7 +3,7 @@
     background: linear-gradient(0deg, rgba(214,232,238,1) 0%, rgba(172,193,212,1) 100%);
     padding: 88px 0;
     @include respond-to($tablet) {
-        padding: 60px 0;
+        padding: 50px 0 18px;
         background: #acc1d4;
     }
     &__wrap {
@@ -54,7 +54,11 @@
             line-height: 1;
             margin-bottom: 35px;
             @include respond-to($xs-max) {
+                margin-right: 0;
                 padding: 0 15px;
+                align-self: flex-start;
+                width: 100%;
+
             }
             span {
                 display: inline-block;
@@ -85,8 +89,8 @@
                     font-size: 56px;
                 }
                 @include respond-to($xs-max) {
-                    font-size: 44px;
-                    letter-spacing: 0;
+                    font-size: 42px;
+                    letter-spacing: 0px;
                 }
 
             }
@@ -142,7 +146,7 @@
                     @include respond-to($tablet) {
                         border-left: none;
                         padding-bottom: 0;
-                        margin-bottom: 30px;
+                        margin-bottom: 32px;
                         padding-left: 0;
                     }
                     &-title {
@@ -153,7 +157,7 @@
                         @include respond-to($tablet) {
                             display: flex;
                             font-size: 18px;
-                            margin-bottom: 35px;
+                            margin-bottom: 16px;
                         }
 
                         .mob-img {
@@ -161,6 +165,7 @@
                             @include respond-to($tablet) {
                                 display: inline-block;
                                 max-width: 145px;
+                                min-width: 145px;
                                 margin-right: 15px;
                             }
                             img {
