--- a/src/style/themes/_contact.scss
+++ b/src/style/themes/_contact.scss
@@ -15,11 +15,29 @@
         display: inline-block;
         width: 100%;
         height: 100%;
+        background-size: cover;
+        z-index: -2;
+        @include respond-to($xs-max) {
+            background: url("../img/contact-bg-mob.jpg") 0px -93px repeat-x;
+        }
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-block;
+        width: 100%;
+        height: 100%;
         background: url("../img/contact-bg-oblaka.png") 107px 71% no-repeat;
         background-size: cover;
         z-index: -1;
-    }
 
+        @include respond-to($xs-max) {
+            background-position: 116px 280px;
+        }
+    }
 
     &__wrap {
         display: flex;
@@ -55,10 +73,12 @@
             @include respond-to($xs-max) {
                 font-size: 25px;
                 color: #fff;
-                margin: 0 auto 15px;
+                margin: 0 auto 27px;
                 display: flex;
                 width: 100%;
                 justify-content: center;
+                padding-left: 50px;
+                line-height: 1.2;
             }
         }
 
@@ -68,7 +88,8 @@
             padding: 55px 46px;
             margin-bottom: 28px;
             @include respond-to($xs-max) {
-                padding: 20px 35px;
+                padding: 20px 35px 10px;
+                margin-bottom: 34px;
             }
         }
 
@@ -79,6 +100,7 @@
             margin-bottom: 27px;
             @include respond-to($xs-max) {
                 font-size: 16px;
+                margin-bottom: 19px;
             }
 
             a {
@@ -91,10 +113,14 @@
             display: flex;
             width: 100%;
             justify-content: center;
+            margin-bottom: 0;
 
             &-item {
                 margin: 0 15px;
                 display: inline-block;
+                @include respond-to($xs-max) {
+                    margin: 0 11px;
+                }
                 a {
                     display: inline-block;
                     width: 95px ;
@@ -107,10 +133,12 @@
                         width: 60px;
                         height: 60px;
                     }
-                    &:hover  {
-                        -webkit-box-shadow: 0px 0px 33px -8px rgba(255,255,255,.75);
-                        -moz-box-shadow: 0px 0px 33px -8px rgba(255,255,255,.75);
-                        box-shadow: 0px 0px 33px -8px rgba(255,255,255,.75);
+
+                    &.fb {
+                        -webkit-box-shadow: 0px 0px 33px 0px rgba(255,255,255,1);
+                        -moz-box-shadow: 0px 0px 33px 0px rgba(255,255,255,1);
+                        box-shadow: 0px 0px 33px 0px rgba(255,255,255,1);
+
                     }
 
                     img {
@@ -144,7 +172,7 @@
 
             }
             @include respond-to($xs-max) {
-                font-size: 25px;
+                font-size: 24px;
                 color: #fff;
                 margin: 0 auto 15px;
             }
@@ -161,6 +189,10 @@
             @include respond-to($medium-max) {
                 padding: 30px;
             }
+            @include respond-to($xs-max) {
+                padding: 15px 15px 30px;
+            }
+
             .item {
                 display: flex;
                 justify-content: space-between;
@@ -169,7 +201,7 @@
                 margin-bottom: 30px;
                 @include respond-to($xs-max) {
                     flex-direction: column;
-                    margin-bottom: 15px;
+                    margin-bottom: 20px;
                 }
 
                 &__title {
@@ -183,6 +215,7 @@
                         color: #0a1f32;
                         opacity: 1;
                         margin-bottom: 10px;
+                        padding-left: 8px;
                     }
                 }
 
@@ -202,11 +235,16 @@
                         max-width: 245px;
                     }
                     @include respond-to($xs-max) {
+                        font-size: 16px;
                        max-width: 100%;
+                        background: rgba(0,0,0, .15);
                     }
                 }
                 input {
                     height: 40px;
+                    @include respond-to($xs-max) {
+                        height: 38px;
+                    }
                 }
                 textarea {
                     resize: none;
@@ -218,6 +256,7 @@
                 }
 
             }
+
             .submit {
                 font-size: 20px;
                 color: #ffffff;
@@ -238,13 +277,12 @@
                     width: 100%;
                 }
                 .text {
-                    text-shadow: 5px 0px 20px rgba(255, 255, 255, 0);
                     transition: text-shadow .3s;
-
-
+                    text-shadow: 5px 0px 20px rgba(255, 255, 255, 0);
                 }
+
                 &:hover .text {
-                    text-shadow: 5px 0px 20px rgba(255, 255, 255, 0.75);
+                    text-shadow: 3px 0px 15px rgba(255, 255, 255, 1);
                 }
             }
         }
