--- a/src/style/themes/_plan.scss
+++ b/src/style/themes/_plan.scss
@@ -65,7 +65,7 @@
             flex-direction: column-reverse;
             position: relative;
             z-index: 10;
-            padding-top: 80px;
+            padding-top: 88px;
         }
 
         &:before {
@@ -91,7 +91,7 @@
             padding-top: 37px;
             @include respond-to($tablet) {
                max-width: 500px;
-                margin: 0 auto 30px;
+                margin: 0 auto 38px;
                 border-left:  none;
             }
             @include respond-to($xs-max) {
@@ -101,7 +101,7 @@
             .mob-wrap {
                 @include respond-to($tablet) {
                     border-left: 2px solid #02457a;
-                    padding-top: 20px;
+                    padding-top: 27px;
                 }
             }
 
@@ -114,6 +114,8 @@
                 @include respond-to($tablet) {
                     font-size: 24px;
                     padding-left: 0;
+                    text-align: center;
+                    margin: 10px 0;
                 }
                 @include respond-to($xs-max) {
                     font-size: 20px;
@@ -156,6 +158,7 @@
                     padding-left: 40px;
                     @include respond-to($xs-max) {
                         max-width: 240px;
+                        margin-bottom: 20px;
                     }
 
                     &:last-child {
@@ -286,6 +289,7 @@
                 }
                 @include respond-to($tablet) {
                     font-size: 24px;
+                    margin-bottom: 24px;
                 }
                 @include respond-to($xs-max) {
                     font-size: 20px;
