--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,16 +1,14 @@
 <header class="header">
     <div class="container">
         <div class="row">
-            <ul class="header__wrap">
-                <li class="header-item">
-                    <a href="#" class="btn-header-menu"><span>Contact</span></a>
-                </li>
-                <li class="header-item">
-                    <a href="/details.html" class="btn-header-menu"><span>Technical details</span></a>
-                </li>
-                <li class="header-item">
-                    <a href="#" class="btn-header-menu"><span>Information</span></a>
-                </li>
+            <ul class="header__nav">
+
+                    <a href="#" class="header-nav">Contact</a>
+
+                    <a href="/details.html" class="header-nav">Technical details</a>
+
+                    <a href="#" class="header-nav">Information</a>
+
             </ul>
         </div>
     </div>
