--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import "helpers/_variables";
 @import "helpers/_mixins";
 @import "vendors/_bootstrap";
+@import "vendors/_magnific-popup";
 //@import "vendors/_font-awesome";
 //@import "vendors/_hamburgers.min";
 //@import "vendors/_slick";
